--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,155 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
+
+:root {
+    /* Primary */
+    --Soft_blue: hsl(215, 51%, 70%);
+    --Cyan: hsla(178, 100%, 50%, 0.500);
+
+    /* Neutral */
+    --Very_dark_blue-main: hsl(217, 54%, 11%);
+    --Very_dark_blue-card: hsl(216, 50%, 16%);
+    --Very_dark_blue-line: hsl(215, 32%, 27%);
+    --White: hsl(0, 0%, 100%);
+
+    /* Font */
+    --primary: 'Outfit', sans-serif;
+}
+
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+
+body {
+    background-color: var(--Very_dark_blue-main);
+    font-family: var(--primary);
+    font-size: 18px;
+    color: var(--White);
+}
+
+/* Card */
+.card {
+    background-color: var(--Very_dark_blue-card);
+    margin: 60px auto 60px;
+    border-radius: 16px;
+    width: 330px;
+    height: 546px;
+    padding: 26px;
+}
+
+.card__images {
+    background-image: url(../images/image-equilibrium.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin: 0 auto;
+    width: 280px;
+    height: 280px;
+    border-radius: 8px;
+    overflow: hidden;
+}
+
+.card__images-eye {
+    background-color: var(--Cyan);
+    width: 100%;
+    height: 100%;
+    background-image: url(../images/icon-view.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    opacity: 0;
+    z-index: 99;
+    cursor: pointer;
+    transition: .3s;
+}
+
+.card__images:hover .card__images-eye {
+    opacity: 1;
+}
+
+.card__title {
+    color: var(--White);
+    font-size: 1.3em;
+    margin: 18px 0;
+}
+
+.card__description {
+    color: var(--Soft_blue);
+    font-size: .9em;
+    margin-bottom: 20px;
+    font-weight: 300;
+}
+
+.card__details {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    font-size: .9em;
+}
+
+.card__details_value {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+    color: var(--Cyan);
+}
+
+.card__details__time {
+    display: flex;
+    align-items: center;
+    gap: 3px;
+    color: var(--Soft_blue);
+}
+
+.card__creator {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+    padding-top: 18px;
+    border-top: 1px solid var(--Soft_blue);
+}
+
+.card__creator__photo {
+    width: 35px;
+    height: 35px;
+    background-image: url(../images/image-avatar.png);
+    background-position: center;
+    background-size: cover;
+    border: 1px solid var(--White);
+    border-radius: 50%;
+}
+
+.card__creator__create {
+    font-size: .9em;
+    color: var(--White);
+}
+
+.card__creator__create span {
+    color: var(--Soft_blue);
+}
+
 /* Header */
 .attribution { 
     font-size: 11px; text-align: center; 
 }
 .attribution a { 
     color: hsl(228, 45%, 44%); 
+}
+
+/* Media Queries */
+/* >900px */
+@media only screen and (min-width:900px) {
+    .card {
+        width: 354px;
+        height: 600px;
+    }
+
+    .card__images {
+        width: 300px;
+        height: 300px;
+    }
+
+    .card__description {
+        font-size: 1em;
+    }
 }
